# fsds-training

./: .gitignore  Dockerfile  README.md  env.yml  main.py  nonstandardcode.py:Zone.Identifier  publish_config.json  pyproject.toml  requirements.txt  scores.txt
.github/workflows/: build_action.yml  env.yml  install_action.yml  lint_action.yml  monitoring.yml  pullrun.yml  testing_action.yml
evidently_reports/: drift_summary.md  prediction_drift_report.html
factory/: sidfsdsadf.json
fsds_training/: main.py  preprocessing.py  scoring.py  training.py
fsds_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: imputer.pkl  linear_regression_model.pkl
predictions/: test_predictions.csv  train_predictions.csv
python_project_uv.egg-info/: SOURCES.txt
scripts/: drift_detection.py  inference.py  ingest_data.py  main.py  score.py  train.py
src/: data_ingestion.py  nonstandardcode.py  preprocessing.py  scoring.py  training.py
src/python_project_uv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_ingestion.py
